--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+button {
+    padding: 10px;
+    margin: 5px 10px;
+    border-radius: 7px;
+    border: none;
+    font-weight: bold;
+    font-size: 16px;
+    transition: .25s;
+}
+
 .header {
     width: 100vw;
     height: 100px;
@@ -20,6 +30,22 @@ body {
     font-size: 30px;
     font-weight: bold;
     margin-left: 25px;
+}
+
+.nav-bar {
+    margin-left: 100px;
+}
+
+.nav-bar button {
+    background-color: #ED6B5A;
+}
+
+.nav-bar button:hover {
+    background-color: #d34735;
+}
+
+.nav-bar button:active {
+    background-color: #ab2a19;
 }
 
 .main-display {
@@ -68,13 +94,15 @@ body {
 }
 
 .form-btns button {
-    padding: 10px;
-    margin: 5px 10px;
     background-color: #ED6B5A;
-    border-radius: 7px;
-    border: none;
-    font-weight: bold;
-    font-size: 16px;
+}
+
+.form-btns button:hover {
+    background-color: #d34735;
+}
+
+.form-btns button:active {
+    background-color: #ab2a19;
 }
 
 .product-window {
@@ -99,6 +127,9 @@ body {
 .product-description {
     margin-left: 10px;
     line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .product-name {
@@ -107,4 +138,22 @@ body {
 
 .product-price {
     font-size: 20px;
+}
+
+.product-btns {
+    width: 275px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-btns button {
+    background-color: #3AD886;
+}
+
+.product-btns button:hover {
+    background-color: #31b36f;
+}
+
+.product-btns button:active {
+    background-color: #258654;
 }
